--- a/Ocean.Inside.Project/Ocean.Inside.Project.csproj
+++ b/Ocean.Inside.Project/Ocean.Inside.Project.csproj
@@ -271,6 +271,7 @@
     <Content Include="css\css.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="css\custom_styles.css" />
     <Content Include="css\style.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -319,7 +320,6 @@
     <Content Include="images\About\place-09-132x84.jpg" />
     <Content Include="images\About\place-09-132x84.png" />
     <Content Include="images\About\Yauhen_mini.jpg" />
-    <Content Include="images\Home\Turkish_main.jpg" />
     <Content Include="images\Home\background-05-1920x900.jpg" />
     <Content Include="images\Home\background-06-1920x900.jpg" />
     <Content Include="images\Home\background-07-1920x900.jpg" />
