--- a/Ocean.Inside.Project/Ocean.Inside.Project.csproj
+++ b/Ocean.Inside.Project/Ocean.Inside.Project.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\GalleryItemViewModel.cs" />
+    <Compile Include="Models\SitemapNode.cs" />
     <Compile Include="Models\TestimonialViewModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\CheckInViewModel.cs" />
@@ -250,7 +251,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\IImageProcessor.cs" />
     <Compile Include="Utils\ImageProcessor.cs" />
+    <Compile Include="Utils\SiteMapBuilder.cs" />
     <Compile Include="Utils\StringExtensions.cs" />
+    <Compile Include="Utils\UrlHelperExtensions.cs" />
     <Compile Include="Utils\Utilities.cs" />
     <Compile Include="Validators\GroupTourValidator.cs" />
     <Compile Include="Validators\TourStepValidator.cs" />
@@ -352,7 +355,6 @@
     <Content Include="images\Tours\Испания\5.jpg" />
     <Content Include="images\Tours\Испания\6.jpg" />
     <Content Include="images\Tours\Испания\7.jpg" />
-    <Content Include="robots.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="js\core.min.js" />
@@ -401,15 +403,7 @@
     <Content Include="Views\Home\_HotelTourItem.cshtml" />
     <Content Include="Views\Shared\_HeaderSliderPartial.cshtml" />
     <Content Include="Views\Tour\AddTour.cshtml" />
-    <Content Include="Views\Tour\GroupTours.cshtml" />
-    <Content Include="Views\Tour\GroupTour.cshtml" />
     <Content Include="Views\Tour\EditTour.cshtml" />
-    <Content Include="Views\Tour\AddStep.cshtml" />
-    <Content Include="Views\Tour\AddCheckIn.cshtml" />
-    <Content Include="Views\Tour\AddGroupTour.cshtml" />
-    <Content Include="Views\Tour\EditGroupTour.cshtml" />
-    <Content Include="Views\Tour\AddWaste.cshtml" />
-    <Content Include="Views\Tour\EditStep.cshtml" />
     <Content Include="Views\Shared\_CallBox.cshtml" />
     <Content Include="Views\Tour\HotelTours.cshtml" />
     <Content Include="Views\Tour\HotelTour.cshtml" />
@@ -424,12 +418,20 @@
     <Content Include="Views\Error\_Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Tour\_TourItem.cshtml" />
-    <Content Include="Views\Tour\_GroupTourItem.cshtml" />
-    <Content Include="Views\Tour\_GroupTourStepItem.cshtml" />
     <Content Include="Views\Gallery\Index.cshtml" />
     <Content Include="Views\Gallery\Edit.cshtml" />
     <Content Include="Views\Gallery\Add.cshtml" />
     <Content Include="Views\Gallery\AddImage.cshtml" />
+    <Content Include="Views\Tour\AddCheckIn.cshtml" />
+    <Content Include="Views\Tour\AddGroupTour.cshtml" />
+    <Content Include="Views\Tour\AddStep.cshtml" />
+    <Content Include="Views\Tour\AddWaste.cshtml" />
+    <Content Include="Views\Tour\EditGroupTour.cshtml" />
+    <Content Include="Views\Tour\EditStep.cshtml" />
+    <Content Include="Views\Tour\GroupTour.cshtml" />
+    <Content Include="Views\Tour\GroupTours.cshtml" />
+    <Content Include="Views\Tour\_GroupTourItem.cshtml" />
+    <Content Include="Views\Tour\_GroupTourStepItem.cshtml" />
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -440,7 +442,7 @@
     <Folder Include="images\Gallery\" />
     <Folder Include="images\Visas\" />
     <Folder Include="Views\Blog\" />
-    <Folder Include="Views\Email\" />
+    <Folder Include="Views\GroupTour\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
