--- a/Ocean.Inside.Project/Ocean.Inside.Project.csproj
+++ b/Ocean.Inside.Project/Ocean.Inside.Project.csproj
@@ -271,10 +271,17 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\PagedList.css" />
+    <Content Include="css\css.min.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="css\css.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="css\custom_styles.min.css" />
     <Content Include="css\custom_styles.css" />
+    <Content Include="css\style.min.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="css\style.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -299,10 +306,12 @@
     <Content Include="fonts\materialdesignicons-webfont.ttf" />
     <Content Include="fonts\materialdesignicons-webfont.woff" />
     <Content Include="fonts\materialdesignicons-webfont.woff2" />
+    <None Include="bundleconfig.json" />
     <None Include="Properties\PublishProfiles\local.pubxml" />
     <None Include="Properties\PublishProfiles\ocean-inside - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\okeanvnutry.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
+    <Content Include="images\About\Irina.png" />
     <Content Include="images\About\Maria_mini.jpg" />
     <Content Include="images\About\place-01-118x89.jpg" />
     <Content Include="images\About\place-01-118x89.png" />
@@ -355,9 +364,19 @@
     <Content Include="images\Tours\Испания\5.jpg" />
     <Content Include="images\Tours\Испания\6.jpg" />
     <Content Include="images\Tours\Испания\7.jpg" />
+    <Content Include="js\core.js" />
+    <Content Include="js\core.min.js">
+      <DependentUpon>core.js</DependentUpon>
+    </Content>
+    <Content Include="js\openapi.js" />
+    <Content Include="js\openapi.min.js">
+      <DependentUpon>openapi.js</DependentUpon>
+    </Content>
+    <Content Include="js\script.min.js">
+      <DependentUpon>script.js</DependentUpon>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="js\core.min.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
@@ -413,7 +432,9 @@
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Error\_Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
